@@ -6,6 +6,7 @@ port = 5060			; Port to bind to
 bindaddr = 0.0.0.0		; Address to bind to
 context = default		; Default for incoming calls
 ;srvlookup = yes		; Enable SRV lookups on outbound calls
+;pedantic = yes			; Enable slow, pedantic checking for Pingtel
 ;tos=lowdelay
 ;tos=184
 ;maxexpirey=3600		; Max length of incoming registration we allow
